# 5dv117

./: .gitignore  README
report/: report.tex
src/: .gitignore  CYK.hs  cfg.cabal
src/CFG/: CNF.hs  CNFHelpers.hs  Decide.hs  Examples.hs  Parse.hs  Read.hs  Types.hs
src/CFG/Helpers/: CFG.hs  CNF.hs
src/CFG/Internal/: NameMonad.hs
src/exe/cnfAlgorithm/: Main.hs
src/exe/cykAlgorithm/: Main.hs
src/exe/decisionAlgorithm/: Main.hs
src/tests/: Tests.hs
